# fastapi_xray

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
debug_tool/: inspector.py  main.py  schemas.py
debug_tool/cli_app/: logger.py  main.css  ui.py
debug_tool/commons/logger/: __init__.py
debug_tool/server/: __init__.py  receiver.py
debug_tool/ui/: app.py  main.css
debug_tool/ui/components/: panel_factory.py  panels.py  widgets.py
debug_tool/ui/components/widgets/: list.py  panels.py  text.py
fastapi_xray/: __init__.py  cli.py  inspector.py  schemas.py  xray.py
fastapi_xray/commons/logger/: __init__.py
fastapi_xray/server/: __init__.py  receiver.py
fastapi_xray/ui/: app.py  main.css
fastapi_xray/ui/components/: panel_factory.py  panels.py
fastapi_xray/ui/components/widgets/: __init__.py  list.py  panels.py  text.py
