[tool.poetry]
name = "fastapi_xray"
version = "0.1.2"
description = "A FastAPI debug tool to look into request/response"
authors = ["Ropali Munshi <ropali68@example.com>"]
readme = "README.md"
homepage = "https://github.com/ropali/fastapi_xray"
repository = "https://github.com/ropali/fastapi_xray"
documentation = "https://github.com/ropali/fastapi_xray"
keywords = ["fastapi", "debug", "tool"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "fastapi_xray" }
]
include = [
    "fastapi_xray/ui/*.css"
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=1.0"

[tool.poetry.scripts]
fastapi_xray = "fastapi_xray.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
